This is a new commit for what I originally planned to be amended

--- a/accet/index.html
+++ b/accet/index.html
@@ -5,186 +5,202 @@
 	<title>Final Project</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../accet/css/styles.css" />
+	<link rel="stylesheet" href="..//accet/css/styles.css" />
 	<link rel="stylesheet" href="../accet/css/font.css" />
+	<link rel="stylesheet" href="./font/Montserrat/font.css" />
 	<link rel="stylesheet" href="../accet/scss/variables.scss" />
-	<link rel="stylesheet" href="../accet/css/bootstrap-grid.css" />
-	<link rel="stylesheet" href="../accet/css/bootstrap-grid.min.css" />
-	<link rel="stylesheet" href="../accet/css/bootstrap-reboot.css" />
-	<link rel="stylesheet" href="../accet/css/bootstrap-reboot.min.css" />
-	<link rel="stylesheet" href="../accet/css/bootstrap.css" />
-	<link rel="stylesheet" href="../accet/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="../accet/css/styles.css" />
-	<link rel="stylesheet" href="../accet/css/media.css" />
-	<link rel="stylesheet" href="../accet/css/materialize.css" />
-	<link rel="stylesheet" href="../accet/css/materialize.min.css" />
-	<link rel="stylesheet" href="../accet/js/bootstrap.bundle.js" />
-	<link rel="stylesheet" href="../accet/js/bootstrap.js" />
-	<link rel="stylesheet" href="..//accet/js/materialize.js" />
-	<link rel="stylesheet" href="../accet/js/script.js" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-		crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit="no">
 	<meta name="description" content="Project Public">
 	<meta name="author" content="final projects">
-	<style>
-		body {
-			background: #E5E5E5;
-		}
-	</style>
 </head>
 <body>
-	<div class=section>
-		<div class=block_1>
-			<div class=block_1_background>
-				<div class=block_1_1>
-					<div class=block_service>
-						<div class=secvice><span class="block_service_text">Services</span>
-							<div class=arrow>
+	<div class="container">
+		<div>
+			<div class="desktop">
+				<div class="splash">
+					<div class="content">
+						<div class="grid">
+							<div class="frame3">
+								<div class="frame4">
+									<span class="text h3Caps"><span>Services</span></span>
+									<img alt="AssetsArrow2162" src="../accet/images/Arrow.png" class="arrow" />
+								</div>
+								<span class="what"><span>What can we do better than others?</span></span>
 							</div>
-						</div><span class="block_text_1">What can we do better than others?</span>
+							<div class="row">
+								<div class="item">
+									<div class="icon">
+										<img alt="AssetsServicesEcommerce2167" src="../accet/images/Ecommerce.png"
+											class="assets-services" />
+									</div>
+									<div class="frame111">
+										<span class="text1 h3Regular">
+											<span>IT and e-commerce</span>
+										</span>
+										<span class="text2 paragraphRegular">
+											<span>
+												An endless stream of contracts, tax issues, labor
+												relations, corporate papers - legal work distracts you
+												from doing business. But there is not much work to do to
+												hire an in-house lawyer.
+											</span>
+										</span>
+									</div>
+								</div>
+								<div class="item">
+									<div class="icon">
+										<img alt="AssetsServicesSupport2173" src="../accet/images/Support.png"
+											class="assets-services" />
+									</div>
+									<div class="frame111">
+										<span class="text1 h3Regular">
+											<span>
+												<span>Comprehensive daily</span>
+												<br />
+												<span>legal support</span>
+											</span>
+										</span>
+										<span class="text2 paragraphRegular">
+											<span>
+												In addition, over time, the work will become the same type
+												and uninteresting for a full-time lawyer. And we know very
+												well how difficult it is to find a good candidate with
+												experience in the field of information technology in
+												Ukraine.
+											</span>
+										</span>
+									</div>
+								</div>
+								<div class="item">
+									<div class="icon">
+										<img alt="assets-services-corporate" src="../accet/images/Coprorate.png"
+											class="assets-services" />
+									</div>
+									<div class="frame111">
+										<span class="text1 h3Regular">
+											<span>Structuring corporate relationships</span>
+										</span>
+										<span class="text2 paragraphRegular">
+											<span>
+												Instead of just providing legal services, we will hire a
+												lawyer or a whole team that will fit into the daily life
+												of your company.
+											</span>
+										</span>
+									</div>
+								</div>
+							</div>
+							<div class="row1">
+								<div class="item">
+									<div class="icon">
+										<img alt="AssetsServicesTrust2186" src="../accet/images/Trust.png" class="assets-services" />
+									</div>
+									<div class="frame111">
+										<span class="text1 h3Regular">
+											<span>Building contractual relations</span>
+										</span>
+										<span class="text2 paragraphRegular">
+											<span>
+												Once a week, or week after month, you have your own lawyer
+												by your side. Anyone in the company can catch it at the
+												coffee maker and just talk about current affairs instead
+												of waiting for update status.
+											</span>
+										</span>
+									</div>
+								</div>
+								<div class="item">
+									<div class="icon">
+										<img alt="AssetsServicesProtection2192" src="../accet/images/Protection.png"
+											class="assets-services" />
+									</div>
+									<div class="frame111">
+										<span class="text1 h3Regular">
+											<span>Protection of business, intellectual property</span>
+										</span>
+										<span class="text2 paragraphRegular">
+											<span>
+												And all the other time he will work on new diverse
+												projects, so he will definitely not stop in professional
+												development. One way or another, all Axon Partners will
+												work for you instead of a corporate lawyer.
+											</span>
+										</span>
+									</div>
+								</div>
+								<div class="item">
+									<div class="icon">
+										<img alt="VectorI219" src="../accet/images/Court.png" class="assets-services" />
+									</div>
+									<div class="frame111">
+										<span class="text1 h3Regular">
+											<span>Judicial representation</span>
+										</span>
+										<span class="text2 paragraphRegular">
+											<span>
+												Is it a small, medium-sized company or a market leader?
+												Local business or multinational company? Do you have your
+												own legal department or not?
+											</span>
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="shadow">
+							<img alt="Bg1" src="../accet/images/Bg2.svg" class="bg" />
+							<img alt="Bg2" src="../accet/images/Bg.svg" class="bg1" />
+						</div>
 					</div>
-					<div class=sector_1>
-						<div class=item_1>
-							<div class=item_1_style>
-								<div class=vector_1>
+					<div class="spacer"></div>
+					<div class="clients">
+						<a href="#"><div class="grid1">
+							<div class="row2">
+								<div class="item06">
+									<img alt="HillelLogo" src="../accet/images/hillel-logo-oneline-white-uk.png" class="hillel-logo" />
+								</div>
+								<div class="item07">
+									<img alt="image2230" src="../accet/images/image-2-230.png" class="image" />
+								</div>
+								<div class="item08">
+									<img alt="logo1" src="../accet/images/logo-1.png" class="logo1" />
+								</div>
+								<div class="item09">
+									<img alt="retina2" src="../accet/images/retina-2.png" class="retina2" />
 								</div>
 							</div>
-							<div class=item_block_1><span class="item_block_1_style">IT and e-commerce</span><span
-									class="item_block_1_text">An
-									endless stream of
-									contracts, tax issues, labor relations, corporate papers - legal work distracts you
-									from doing
-									business. But there is not much work to do to hire an in-house lawyer.</span></div>
-						</div>
-						<div class=item_2>
-							<div class=item_2_style>
-								<div class=vector_2>
+							<div class="row3">
+								<div class="item10">
+									<img alt="Frame6" src="../accet/images/Frame 6.png" class="frame6" />
+								</div>
+								<div class="item11">
+									<img alt="Frame7" src="../accet/images/frame-7.png" class="frame7" />
+								</div>
+								<div class="item12">
+									<img alt="logo2" src="../accet/images/logo-2.png" class="logo2" />
+								</div>
+								<div class="item13">
+									<img alt="ecolease2" src="../accet/images/ecolease.png" class="ecolease" />
 								</div>
 							</div>
-							<div class=item_block_2><span class="item_block_2_style">Comprehensive daily
-									legal support</span><span class="item_block_2_text">In addition, over time, the work
-									will
-									become the same type
-									and uninteresting for a full-time lawyer. And we know very well how difficult it is
-									to find a good
-									candidate with experience in the field of information technology in Ukraine.</span>
-							</div>
-						</div>
-						<div class=item_3>
-							<div class=item_3_style>
-								<div class=vector_3>
+							<div class="row4">
+								<div class="item14">
+									<img alt="image22" src="../accet/images/image-2-246.png" class="image1" />
+								</div>
+								<div class="item15">
+									<img alt="iconlogo" src="../accet/images/icon-logo-1.png" class="iconlogo1" />
+								</div>
+								<div class="item16">
+									<img alt="logo2250" src="../accet/images/logo.png" class="logo" />
+								</div>
+								<div class="item17">
+									<img alt="logoM2" src="../accet/images/logom.png" class="logo-m" />
 								</div>
 							</div>
-							<div class=item_block_3><span class="item_block_3_style">Structuring
-									corporate<br>relationships</span><span class="item_block_3_text"><br><br>Instead of
-									just providing legal
-									services, we will hire a lawyer or a
-									whole team that
-									will fit into the daily life of your company.</span></div>
-						</div>
-					</div>
-					<div class=sector_2>
-						<div class=item_4>
-							<div class=item_4_style>
-								<div class=vector_4>
-								</div>
-							</div>
-							<div class=item_block_4><span class="item_block_4_style">Building contractual
-									relations</span><span class="item_block_4_text">Once a
-									week, or week after month, you have your own lawyer by your side. Anyone in the
-									company can catch it
-									at the coffee maker and just talk about current affairs instead of waiting for
-									update status.</span>
-							</div>
-						</div>
-						<div class=item_5>
-							<div class=item_5_style>
-								<div class=vector_5>
-								</div>
-							</div>
-							<div class=item_block_5><span class="item_block_5_style">Protection of
-									business,<br>intellectual
-									property</span><span class="item_block_5_text">And all the other time he will work
-									on new
-									diverse projects, so he will definitely not
-									stop in professional development. One way or another, all Axon Partners will work
-									for you instead of a
-									corporate lawyer.</span></div>
-						</div>
-						<div class=item_6>
-							<div class=item_6_style>
-								<div class=vector_6>
-								</div>
-							</div>
-							<div class=item_block_6><span class="item_block_6_style">Judicial representation</span><span
-									class="item_block_6_text">Is it a small,medium-sized company or a market leader?
-									Local business or multinational company? Do
-									you have your own legal department or not?</span>
-							</div>
-						</div>
+						</div></a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class=bottom_line_1_box>
-		<div class="bottom_line_1"></div>
-		<div class="bottom_line_2"></div>
-	</div>
-	</div>
-	<div class=section_2>
-		<a href="/">
-			<div class=section_2_border>
-				<div class=box_1>
-					<div class=box_1_1_style>
-						<div class="box_1_1_part"></div>
-					</div>
-					<div class=box_1_2_style>
-						<div class="box_1_2_part"></div>
-					</div>
-					<div class=box_1_3_style>
-						<div class="box_1_3_part"></div>
-					</div>
-					<div class=box_1_4_style>
-						<div class="box_1_4_part"></div>
-					</div>
-				</div>
-				<div class=box_2>
-					<div class=box_2_1_style>
-						<div class="box_2_1_part"></div>
-					</div>
-					<div class=box_2_2_style>
-						<div class="box_2_2_part"></div>
-					</div>
-					<div class=box_2_3_style>
-						<div class="box_2_3_part"></div>
-					</div>
-					<div class=box_2_4_style>
-						<div class="box_2_4_part"></div>
-					</div>
-				</div>
-				<div class=box_3>
-					<div class=box_3_1_style>
-						<div class="box_3_1_part"></div>
-					</div>
-					<div class=box_3_2_style>
-						<div class="box_3_2_part"></div>
-					</div>
-					<div class=box_3_3_style>
-						<div class="box_3_3_part"></div>
-					</div>
-					<div class=box_3_4_style>
-						<div class="box_3_4_part"></div>
-					</div>
-				</div>
-			</div>
-		</a>
-	</div>
-	</div>
 </body>
-
 </html>
